# echo-lib

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Tiltfile  alembic.ini  docker-compose.yaml  pyproject.toml  user_data.xlsx
alembic/: env.py
alembic/versions/: 1187dab72c43_verify_models_match_db.py  21384d79932d_add_agent_name_to_campaigns.py  420f69b8becc_set_room_fields_as_nullable.py  4c1942062646_add_substage_and_rating_columns.py  4f1639c0098c_add_jobs.py  54a59a9ca3f3_add_timeline_field.py  5a4d2c0b5e3f_add_cancelled_at_in_campaigns.py  610e4a7b0d73_add_jobs.py  624c95f4acf2_add_error_col_in_jobs.py  766bbb6ac2cf_add_event_default_uuid.py  79a0a64ba979_adversary_details.py  7e45449198d1_create_campaign_model.py  8907dc215cb6_add_adversary_table.py  961e20cb5b22_add_adversary_table.py  ac9e4cf7ea31_add_markets_table.py  b9299f88fb73_add_scheduled_at_to_campaigns.py  c3e39c0778d4_add_campaign_capabilities.py  cabbd272ea70_create_campaign_model.py  cac2d8139a63_movidas_del_lucas_que_no_sabe_hacer_el.py  ced07eb26a5e_improve_status_definition.py  d8fa1030cd62_modified_campaign_details.py  db998cb2c86f_add_campaign_tables.py  e29d3e3cd320_add_agent_name_to_campaigns.py  f331c26a50c0_add_excluded_status.py  fc2268f9a0c4_add_jobs.py
alembic/versions/agents/: 20260502_0001_create_agents_table.py  20260503_0002_create_tenants_table.py  20260503_0003_add_agent_scope.py  20260503_0004_add_agent_description.py  20260503_0005_create_documents_table.py  20260503_0006_add_agent_documents.py  20260510_0007_add_agent_memory_enabled.py  20260520_0009_seed_default_roles.py  20260520_8bd664957e5e_add_users_roles_tenants.py  20260526_0010_create_agent_webhook_tokens.py  20260526_0011_add_agent_sandbox_and_publishers.py  20260601_0012_create_agent_metrics_table.py  20260601_0013_add_agent_batch_window.py
alembic/versions/core/: 188bf1ff8072_add_opportunity_id_index_to_room_table.py  1910088251c9_add_quality_and_program_fields_to_call_.py  4e8effeb4b03_modified_analytics_table.py  54a59a9ca3f3_add_timeline_field.py  5a4d2c0b5e3f_add_cancelled_at_in_campaigns.py  62122da5219e_add_campaign_capabilities.py  8e48cd8452d7_create_evaluators_table.py  8f477b1aaa38_add_last_called_at_to_campaign_detail.py  a7b7cd263de1_merge_migration_heads.py  afa28e491d86_add_scheduled_events_table.py  b7e31265de1f_add_institution_and_study_level_to_.py  bd6a64f4d0b6_baseline.py  c9bcddac826f_modified_analytics_table_and_campaign_.py  cd0478f30a03_add_payment_methods_and_matgo_link_to_.py
data/: session-report.json
k8s/: rabbit.yaml  server.yaml
scripts/: build_summary.py  fetch_campaign_transcriptions.py  load_users.py  run_api.py  run_db.py  send_event.py
src/echo/: __init__.py  config.py  logger.py  server.py
src/echo/agents/: voice.py
src/echo/context/: chain.py  context.py  types.py
src/echo/db/: __init__.py  base.py
tests/unit/: conftest.py  test_context.py  test_db.py  test_messages.py  test_rooms.py
(+66 files in other folders)
